--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,8 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-      - BACKEND_URL=http://backend:3001
+      - NEXT_PUBLIC_API_URL=http://backend:3001
+      - API_URL=http://backend:3001
       - PORT=3000
       - HOSTNAME=0.0.0.0
     depends_on:
