--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,12 @@
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "test:unit": "jest --testPathPattern=tests/services --testPathPattern=tests/errors",
+    "test:integration": "jest --testPathPattern=tests/routes",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\""
@@ -19,13 +24,19 @@
     "ccxt": "^4.4.90",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.3",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.0.3",
     "nodemon": "^3.1.10",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.0"
