feat: Implement Phase 3 production readiness and fix test infrastructure
🏗️ **Major Infrastructure Improvements:**
- Fix Jest test configuration and TypeScript setup (all 106 tests now passing)
- Add centralized environment management with dotenv validation
- Create production-ready multi-stage Docker builds with security hardening
- Implement comprehensive CI/CD pipeline with automated testing and deployment

🚀 **Production Deployment:**
- Add deployment automation script (deploy.sh) with multiple environments
- Create staging and production Docker Compose configurations
- Add comprehensive deployment documentation and guides
- Fix Docker build issues with proper TypeScript configuration

🔧 **Development Experience:**
- Separate build and development TypeScript configurations
- Add proper test command patterns for unit and integration tests
- Update dependencies to latest secure versions
- Add structured logging and error handling improvements

📚 **Documentation:**
- Update README with accurate deployment instructions
- Add Docker deployment guide and production setup docs
- Include API reference and project structure overview

✅ **All systems tested and working:**
- Tests: 4 suites, 106 tests passing
- Build: Clean production builds without test contamination
- Deployment: Full-stack Docker deployment via ./deploy.sh
- Health checks: Backend and frontend monitoring configured

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,17 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3001
+      - LOG_LEVEL=info
+      - CACHE_TTL_TICKERS=10000
+      - CACHE_TTL_FUNDING_RATES=600000
+      - CACHE_TTL_PROCESSED_DATA=10000
+      - API_RATE_LIMIT_WINDOW=60000
+      - API_RATE_LIMIT_MAX=100
+      - CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://frontend:3000
+      - HEALTH_CHECK_TIMEOUT=5000
+      - HEALTH_CHECK_INTERVAL=30000
+      - DEV_ENABLE_DEBUG_LOGS=false
+      - DEV_ENABLE_CACHE_LOGS=false
     env_file:
       - ./backend/.env
     volumes:
