--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,39 +1,30 @@
-# Server Configuration
+# Backend Configuration
+NODE_ENV=development
 PORT=3001
-NODE_ENV=production
 
-# Exchange API Configuration
-# Binance
-BINANCE_API_KEY=your_binance_api_key
-BINANCE_SECRET=your_binance_secret
-BINANCE_SANDBOX=false
+# Logging
+LOG_LEVEL=info
 
-# OKX
-OKX_API_KEY=your_okx_api_key
-OKX_SECRET=your_okx_secret
-OKX_PASSPHRASE=your_okx_passphrase
-OKX_SANDBOX=false
+# Cache Configuration  
+CACHE_TTL_TICKERS=10000
+CACHE_TTL_FUNDING_RATES=600000
+CACHE_TTL_PROCESSED_DATA=10000
 
-# Bitget
-BITGET_API_KEY=your_bitget_api_key
-BITGET_SECRET=your_bitget_secret
-BITGET_PASSPHRASE=your_bitget_passphrase
-BITGET_SANDBOX=false
+# API Configuration
+API_RATE_LIMIT_WINDOW=60000
+API_RATE_LIMIT_MAX=100
 
-# Bybit
-BYBIT_API_KEY=your_bybit_api_key
-BYBIT_SECRET=your_bybit_secret
-BYBIT_SANDBOX=false
+# CORS Origins (comma-separated)
+CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:4000,http://localhost:3002,http://frontend:3000
 
-# Gate.io
-GATE_API_KEY=your_gate_api_key
-GATE_SECRET=your_gate_secret
-GATE_SANDBOX=false
+# Hyperliquid Configuration (Optional)
+# HYPERLIQUID_WALLET_ADDRESS=your_wallet_address_here
+# HYPERLIQUID_PRIVATE_KEY=your_private_key_here
 
-# Hyperliquid
-HYPERLIQUID_WALLET_ADDRESS=your_wallet_address
-HYPERLIQUID_PRIVATE_KEY=your_private_key
+# Health Check Configuration
+HEALTH_CHECK_TIMEOUT=5000
+HEALTH_CHECK_INTERVAL=30000
 
-# Cache Configuration
-CACHE_TTL=10000
-UPDATE_INTERVAL=60000
+# Development Configuration
+DEV_ENABLE_DEBUG_LOGS=true
+DEV_ENABLE_CACHE_LOGS=true
