--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
-    "build": "tsc",
+    "build": "tsc --project tsconfig.build.json",
     "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --watchAll=false",
-    "test:unit": "jest --testPathPattern=tests/services --testPathPattern=tests/errors",
-    "test:integration": "jest --testPathPattern=tests/routes",
+    "test:unit": "jest --testPathPatterns=\"tests/(services|errors)\"",
+    "test:integration": "jest --testPathPatterns=\"tests/routes\"",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\""
@@ -21,17 +21,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "ccxt": "^4.4.90",
+    "ccxt": "^4.4.91",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.19.2",
+    "dotenv": "^17.0.0",
+    "express": "^4.21.2",
     "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.21",
+    "@types/express": "^4.17.23",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.0.7",
     "@types/supertest": "^6.0.3",
     "jest": "^30.0.3",
     "nodemon": "^3.1.10",
