--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,5 +17,9 @@
     "types": ["node", "jest"]
   },
   "include": ["src/**/*", "tests/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "ts-node": {
+    "transpileOnly": true,
+    "files": true
+  }
 } 
